--- a/share-it-clone/package.json
+++ b/share-it-clone/package.json
@@ -5,14 +5,14 @@
   "license": "MIT",
   "version": "1.1.0",
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^1.7.3",
     "date-fns": "^2.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.4",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "socket.io-client": "^2.4.0"
   },
   "scripts": {
